Dev: Item domain

--- a/hello-jpa/src/test/resources/application.yml
+++ b/hello-jpa/src/test/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
     properties:
       hibernate:
 #        sho_sql: true # System.out을 통해서 출력됨
