Dev: dev about item

--- a/hello-jpa/src/main/resources/application.yml
+++ b/hello-jpa/src/main/resources/application.yml
@@ -12,6 +12,9 @@ spring:
       hibernate:
 #        sho_sql: true # System.out을 통해서 출력됨
         format_sql: true
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
 logging.level:
   org.hibernate.SQL: debug
   org.hibernate.type: trace
