feat: API gateway global filter
API Gateway 필터 설정
- 글로벌 필터 설정

--- a/spring-msa/0.practice/api-gateway/gateway-service/src/main/resources/application.yml
+++ b/spring-msa/0.practice/api-gateway/gateway-service/src/main/resources/application.yml
@@ -26,3 +26,9 @@ spring:
             - Path=/second-service/**
           filters:
             - CustomFilter
+#      default-filters:
+#        - name: GlobalFilter
+#          args:
+#            baseMessage: Spring Cloud Gateway Global Filter
+#            preLogger: true
+#            postLogger: true
