feat: logging eureka client port
유레카 클라이언트 포트 출력

--- a/spring-msa/0.practice/api-gateway/first-service/src/main/resources/application.yml
+++ b/spring-msa/0.practice/api-gateway/first-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8081
 spring:
   application:
-    name: my-first-name
+    name: my-first-name # 대문자로 유레카 이름이됨
 eureka:
   client:
     register-with-eureka: true
