--- a/spring-msa/1.toy-ecommerce/user/src/main/resources/application.yml
+++ b/spring-msa/1.toy-ecommerce/user/src/main/resources/application.yml
@@ -4,12 +4,27 @@ server:
 spring:
   application:
     name: user-service
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/h2test
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
+        default_batch_fetch_size: 1000
 
 eureka:
   instance:
-    instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     register-with-eureka: true
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka # ??? ??
+
+greeting:
+  message: Welcome to the simple e-commerce
