--- a/spring-msa/1.toy-ecommerce/user/src/main/resources/application.yml
+++ b/spring-msa/1.toy-ecommerce/user/src/main/resources/application.yml
@@ -5,17 +5,22 @@ spring:
   application:
     name: user-service
   datasource:
-    url: jdbc:h2:tcp://localhost/~/h2test
+    url: jdbc:h2:tcp://localhost/~/test
     username: sa
     password:
     driver-class-name: org.h2.Driver
   jpa:
+    show-sql: true
     hibernate:
       ddl-auto: create
     properties:
       hibernate:
         format_sql: true
         default_batch_fetch_size: 1000
+
+logging:
+  level:
+    org.hibernate.type: trace
 
 eureka:
   instance:
