feat: Eureka registration

--- a/spring-msa/0.practice/api-gateway/gateway-service/src/main/resources/application.yml
+++ b/spring-msa/0.practice/api-gateway/gateway-service/src/main/resources/application.yml
@@ -15,6 +15,10 @@ spring:
     gateway:
       # Filter 순서 : global -> custom -> logging
       routes:
+        - id: user-service
+          uri: lb://USER-SERVICE # Application name
+          predicates:
+            - Path=/user-service/**
         - id: first-service
           uri: lb://MY-FIRST-NAME
           predicates:
