--- a/spring-msa/1.toy-ecommerce/catalog/src/main/resources/application.yml
+++ b/spring-msa/1.toy-ecommerce/catalog/src/main/resources/application.yml
@@ -17,7 +17,8 @@ spring:
       hibernate:
         format_sql: true
         default_batch_fetch_size: 1000
-    generate-ddl: true
+    defer-datasource-initialization: true
+  sql.init.mode: always
 
 logging:
   level:
