--- a/spring-msa/0.practice/api-gateway/gateway-service/src/main/resources/application.yml
+++ b/spring-msa/0.practice/api-gateway/gateway-service/src/main/resources/application.yml
@@ -23,6 +23,10 @@ spring:
           uri: lb://CATALOG-SERVICE # Application name
           predicates:
             - Path=/catalog-service/**
+        - id: order-service
+          uri: lb://ORDER-SERVICE # Application name
+          predicates:
+            - Path=/order-service/**
 #        - id: first-service
 #          uri: lb://MY-FIRST-NAME
 #          predicates:
