--- a/spring-msa/0.practice/api-gateway/gateway-service/src/main/resources/application.yml
+++ b/spring-msa/0.practice/api-gateway/gateway-service/src/main/resources/application.yml
@@ -15,10 +15,32 @@ spring:
     gateway:
       # Filter 순서 : global -> custom -> logging
       routes:
+        # user-service
         - id: user-service
-          uri: lb://USER-SERVICE # Application name
+          uri: lb://USER-SERVICE
           predicates:
-            - Path=/user-service/**
+            - Path=/user-service/login
+            - Method=POST
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/user-service/(?<segment>.*), /$\{segment}
+        - id: user-service
+          uri: lb://USER-SERVICE
+          predicates:
+            - Path=/user-service/users # sign up
+            - Method=POST
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/user-service/(?<segment>.*), /$\{segment}
+        - id: user-service
+          uri: lb://USER-SERVICE
+          predicates:
+            - Path=/user-service/** # others
+            - Method=GET
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/user-service/(?<segment>.*), /$\{segment}
+
         - id: catalog-service
           uri: lb://CATALOG-SERVICE # Application name
           predicates:
@@ -27,6 +49,12 @@ spring:
           uri: lb://ORDER-SERVICE # Application name
           predicates:
             - Path=/order-service/**
+
+
+#        - id: user-service
+#          uri: lb://USER-SERVICE # Application name
+#          predicates:
+#            - Path=/user-service/**
 #        - id: first-service
 #          uri: lb://MY-FIRST-NAME
 #          predicates:
