--- a/spring-fixture-monkey/build.gradle
+++ b/spring-fixture-monkey/build.gradle
@@ -25,11 +25,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
+	compileOnly 'org.projectlombok:lombok:1.18.26'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
-	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok:1.18.26'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'com.navercorp.fixturemonkey:fixture-monkey-starter:1.0.0'
+//	testImplementation 'com.navercorp.fixturemonkey:fixture-monkey-jakarta-validation:1.0.0'
 }
 
 tasks.named('test') {
